--- a/backzollneck/package.json
+++ b/backzollneck/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@distube/ytdl-core": "^4.13.5",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -34,6 +35,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express-rate-limit": "^7.1.5",
+    "fluent-ffmpeg": "^2.1.3",
     "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.4",
@@ -44,8 +46,7 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.4",
     "typeorm": "^0.3.17",
-    "winston": "^3.11.0",
-    "ytdl-core": "^4.11.5"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
