--- a/backzollneck/package.json
+++ b/backzollneck/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@distube/ytdl-core": "^4.13.5",
+    "@distube/ytdl-core": "^4.14.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -37,13 +37,16 @@
     "express-rate-limit": "^7.1.5",
     "fluent-ffmpeg": "^2.1.3",
     "helmet": "^7.1.0",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
+    "puppeteer": "^23.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.5",
     "socket.io": "^4.7.4",
     "typeorm": "^0.3.17",
     "winston": "^3.11.0"
@@ -54,8 +57,10 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/moment": "^2.11.29",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/puppeteer": "^5.4.7",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
